--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -237,7 +237,8 @@
     &__bottom
       grid-row: 8
       grid-column: 1
-      flex-wrap: wrap
+      flex-direction: column
+      align-items: flex-start
       &-links
         margin-bottom: 10px
 @media ( max-width: 425px )
