--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -40,7 +40,7 @@
     padding-top: 82px
     padding-left: 140px
     display: flex
-    align-items: center
+    align-items: flex-end
     justify-content: space-between
     grid-column: 2 / 5
     &-links
